--- a/src/pages/index.astro
+++ b/src/pages/index.astro
@@ -2,6 +2,7 @@
 import MainLayout from "../layouts/MainLayout.astro";
 import EventCard from "../components/EventCard.astro";
 import TestimonialsStar from "../components/TestimonialsStar.astro";
+import Button from "../components/Button.astro";
 ---
 
 <MainLayout title="Forside">
@@ -10,12 +11,12 @@ import TestimonialsStar from "../components/TestimonialsStar.astro";
 	<div class="events">
 		<h2></h2>
 		<p></p>
-		<button></button>
+		<Button></Button>
 	</div>
 	<div class="booking">
 		<h2></h2>
 		<p></p>
-		<button></button>
+		<Button></Button>
 	</div>
 </section>
 <section class="kommende_events">
