--- a/src/pages/about.astro
+++ b/src/pages/about.astro
@@ -4,7 +4,7 @@ import KontaktFormular from "../components/KontaktFormular.astro";
 import Video from "../components/Video.astro";
 ---
 <section class="manden_bag">
-    <h1></h1>
+    <h1>Manden bag</h1>
     <h2></h2>
     <article class="om">
         <img src="" alt="">
