--- a/src/pages/artister.astro
+++ b/src/pages/artister.astro
@@ -3,7 +3,8 @@ import MainLayout from "../layouts/MainLayout.astro";
 import ArtistCard from "../components/ArtistCard.astro";
 ---
 <section class="intro">
-    <h1></h1>
+    <h1>Artister</h1>
+    <h3>Se de skønne artister vi samarbejder med.</h3>
     <div class="sti"></div>
 </section>
 <section class="artister">
