--- a/src/pages/booking.astro
+++ b/src/pages/booking.astro
@@ -4,25 +4,30 @@ import Faq from "../components/Faq.astro";
 import TestimonialsSlider from "../components/TestimonialsSlider.astro";
 import TestimonialsStar from "../components/TestimonialsStar.astro";
 import KontaktFormular from "../components/KontaktFormular.astro";
+import Button from "../components/Button.astro";
 ---
 <section class="booking">
-  <h1></h1>
+  <h1>Booking og promoting</h1>
   <div class="tekst">
-    <h2></h2>
-    <p></p>
-    <button></button>
+    <h2>Skal vi stå for din næste optræden?</h2>
+    <p>Hos Kanonproduktion stræber vi efter at du får den bedste oplevelse, derfor behøver du ikke løfte en finger, du skal bare komme og gøre det du gør bedst - så gør vi nemlig det samme ;)
+      Vi tager personligt hånd om alt - fra planlægning og koordinering til udførelse.
+      Så uanset om i repræsentere et firma, er en privatperson eller artist, skræddersyer vi hos Kanonproduktion hvert arrengement efter jeres behov og ønsker.
+      
+      Lad os gøre jeres næste arrangement til en uforglemmelig oplevelse!</p>
+   <Button>Læs mere</Button>
   </div>
   <img src="" alt="">
 </section>
 <section class="faq">
-    <h2></h2>
+    <h2>Faq</h2>
     <Faq></Faq>
 </section>
 <section class="testimonials">
- <h2></h2>
+ <h2>Hvad artisterne siger</h2>
  <TestimonialsSlider></TestimonialsSlider>
   </section>
   <section class="kontakt">
-    <h2></h2>
+    <h2>Kontakt os</h2>
     <KontaktFormular></KontaktFormular>
   </section>
