--- a/src/pages/events.astro
+++ b/src/pages/events.astro
@@ -3,12 +3,12 @@ import MainLayout from "../layouts/MainLayout.astro";
 import EventCard from "../components/EventCard.astro";
 ---
 <section class="intro">
-    <h1></h1>
-    <h3></h3>
+    <h1>Events</h1>
+    <h3>Se kommende events her og lad dig inspirere.</h3>
     <div class="sti"></div>
 </section>
 <section class="juni">
-    <h2></h2>
+    <h2>Juni - 2024</h2>
     <div class="artister">
         <EventCard></EventCard>
         <EventCard></EventCard>
@@ -16,14 +16,14 @@ import EventCard from "../components/EventCard.astro";
     </div>
 </section>
 <section class="juli">
-    <h2></h2>
+    <h2>Juli - 2024</h2>
     <div class="artister">
         <EventCard></EventCard>
         <EventCard></EventCard>
     </div>
 </section>
 <section class="august">
-    <h2></h2>
+    <h2>August - 2024</h2>
     <div class="artister">
         <EventCard></EventCard>
         <EventCard></EventCard>
