--- a/src/pages/index.astro
+++ b/src/pages/index.astro
@@ -9,18 +9,24 @@ import Button from "../components/Button.astro";
 <section class="hero"></section>
 <section class="cta">
 	<div class="events">
-		<h2></h2>
-		<p></p>
-		<Button></Button>
+		<h2>Find dit næste event</h2>
+		<p>Er du også på udkig efter de fedeste events, den næste gave til fødselaren eller bare en unik oplevelse med dem du holder af? 
+			Kanonproduktion har det hele lige fra de største danske artister, til de sjoveste komikere og den fedeste fest eller event. 
+			Tjek vores kalender for at se det næste event tæt på dig.
+			</p>
+		<Button>Se events</Button>
 	</div>
 	<div class="booking">
-		<h2></h2>
-		<p></p>
-		<Button></Button>
+		<h2>Booking og promoting</h2>
+		<p>Hos kanonproduktion tilbyder vi professionelle skræddersyet løsninger i underholdningsbranchen. 
+			Vi arbejder projektorienteret med artister, events og færdig produktion af radio podcast og liveoptræden. 
+			Vi tilbyder en lang række af danske artister og færdige koncepter, lige fra de små lokale scener til de store venues, kontakt os nu og lad os snakke om dit næste event allerede i dag.
+			</p>
+		<Button>Læs mere</Button>
 	</div>
 </section>
 <section class="kommende_events">
-	<h2></h2>
+	<h2>Kommende events</h2>
 	<article class="cards">
 		<EventCard></EventCard>
 		<EventCard></EventCard>
@@ -28,7 +34,7 @@ import Button from "../components/Button.astro";
 	</article>
 </section>
 <section class="andre_siger">
-	<h2></h2>
+	<h2>Hvad andre siger om os</h2>
 	<article class="testimonials">
 		<div class="testimonial">
 			<TestimonialsStar></TestimonialsStar>
