--- a/src/pages/kontakt.astro
+++ b/src/pages/kontakt.astro
@@ -3,6 +3,6 @@ import MainLayout from "../layouts/MainLayout.astro";
 import KontaktFormular from "../components/KontaktFormular.astro";
 ---
 <section class="kontakt">
-    <h1></h1>
+    <h1>Kontakt</h1>
     <KontaktFormular></KontaktFormular>
 </section>
