--- a/src/pages/tidligere.astro
+++ b/src/pages/tidligere.astro
@@ -3,12 +3,12 @@ import MainLayout from "../layouts/MainLayout.astro";
 import TidligereCard from "../components/TidligereCard.astro";
 ---
 <section class="intro">
-    <h1></h1>
-    <h3></h3>
+    <h1>Tidligere events</h1>
+    <h3>Se tidligere events og skab dig et overblik over vores events.</h3>
     <div class="sti"></div>
 </section>
 <section class="tidligere">
-    <h2></h2>
+    <h2>Året 2023</h2>
     <div class="artister">
         <TidligereCard></TidligereCard>
         <TidligereCard></TidligereCard>
