--- a/src/components/Header.astro
+++ b/src/components/Header.astro
@@ -1,9 +1,9 @@
 ---
-import Logo from "./Logo.astro";
+import Logo from "./Logo.astro"
 ---
 <header class="banner">
     <div class="logo">
-      <Logo />
+      <Logo/>
     </div>
     <nav class="menu">
       <button class="toggle-btn" aria-label="Burgermenu">
@@ -30,11 +30,17 @@ import Logo from "./Logo.astro";
       background-color: var(--color-background-nav);
       padding-block: 20px;
       z-index: 4;
+      gap: var(--gap8);
 
       display: flex;
       flex-direction: column;
       justify-content: flex-end;
       align-items: flex-end;
+    }
+
+    .logo {
+      height: 100%;
+      width: 100%;
     }
 
     a {
