--- a/src/components/Footer.astro
+++ b/src/components/Footer.astro
@@ -28,7 +28,9 @@ import SocialIcon from "./SocialIcon.astro";
         <form>
             <input type="email" placeholder=" info@kanonproduktion.dk" required />
             <br />
+          
             <Button variant="primary">Tilmeld</Button>
+     
           </form>
     </div>
 </div>
@@ -45,8 +47,10 @@ import SocialIcon from "./SocialIcon.astro";
      footer {
     width: 100%;
     background-color: var(--color-background-footer);
-    padding-top: 5%;
-    padding-bottom: 2%;
+    padding: 5rem 0rem;
+    gap: var(--gap13);
+    justify-content: center;
+    align-items: center;
     margin-top: 100px;
     border-top: var(--color-background-stroke) solid 1px; 
 
@@ -79,14 +83,18 @@ import SocialIcon from "./SocialIcon.astro";
     text-decoration:underline;
   }
 
- 
+ .social{
+    
+
+ }
 
   .footer {
     display: grid;
     grid-template-columns: 1fr 1fr 1fr 2fr;
     padding-bottom: 5%;
-    border-bottom: var(--color-background-stroke) solid 1px;
-
+    padding: 1rem 5rem;
+    gap: 5rem;
+   
 }
 
 
@@ -95,11 +103,20 @@ import SocialIcon from "./SocialIcon.astro";
     flex-direction: column;
     align-items: center;
     margin-top: 50px;
+    border-top: var(--color-background-stroke) solid 1px; 
+   
+ 
   }
 
-  .footer div {
-    text-align: center;
+  .designed p{
+    font-size: 0.75rem;
+    font-weight: 300;
+    padding-top: 2%;
   }
+
+  /* .footer div {
+    text-align: center;
+  } */
  
   .col_1 {
     display: flex;
@@ -134,9 +151,11 @@ import SocialIcon from "./SocialIcon.astro";
   .col_4 form input {
     border: 2px solid #51473d;
     background-color: transparent;
-    width: 50%;
+    width: 70%;
     height: 50%;
 
     margin-block: 30px;
   }
+
+
 </style>
