--- a/src/pages/index.astro
+++ b/src/pages/index.astro
@@ -49,3 +49,9 @@ import Button from "../components/Button.astro";
 	</article>
 </section>
 </MainLayout>
+
+<style>
+	section {
+		padding-inline: var(--gap11);
+	}
+</style>
