--- a/src/styles/style.css
+++ b/src/styles/style.css
@@ -105,11 +105,13 @@
   --gap-lg: 9.8125rem;
   --gap-sm: 4.625rem;
 
+  --gap1: 0.3125rem;
+  --gap2: 0.625rem;
   --gap5: 1.5625rem;
   --gap7: 2.1875rem;
   --gap8: 2.5rem;
+  --gap11: 4.375rem;
   --gap13: 7.5rem;
-  --gap2: 0.625rem;
 }
 
 * {
@@ -188,6 +190,7 @@ a {
   font-style: normal;
   font-weight: 900;
   line-height: normal;
-  text-transform: capitalize;
+  text-transform: uppercase;
+  text-decoration: none;
   color: var(--color-button-primary);
 }
