--- a/src/components/Footer.astro
+++ b/src/components/Footer.astro
@@ -81,9 +81,9 @@ import SocialIcon from "./SocialIcon.astro";
     padding-top: 3%;
   }
 
-  a:hover{
-    text-decoration:underline;
-  }
+  a:hover {
+      border-bottom: 2px solid var(--color-text-nav-stroke-hover);
+    }
 
  .social{
     
