--- a/src/components/Footer.astro
+++ b/src/components/Footer.astro
@@ -79,6 +79,7 @@ import SocialIcon from "./SocialIcon.astro";
     text-decoration: none;
     font-weight: 450;
     padding-top: 3%;
+    text-transform: none;
   }
 
   a:hover {
