--- a/src/styles/style.css
+++ b/src/styles/style.css
@@ -142,7 +142,7 @@ h1 {
   font-style: normal;
   font-weight: 800;
   line-height: normal;
-  text-transform: capitalize;
+  text-transform: uppercase;
   color: var(--color-text-h1-primary);
 }
 
@@ -152,7 +152,7 @@ h2 {
   font-style: normal;
   font-weight: 900;
   line-height: normal;
-  text-transform: capitalize;
+  text-transform: uppercase;
   color: var(--color-text-h2-primary);
 }
 
@@ -171,7 +171,7 @@ h4 {
   font-style: normal;
   font-weight: 900;
   line-height: normal;
-  text-transform: capitalize;
+  text-transform: uppercase;
   color: var(--color-text-h4-secondary);
 }
 
