--- a/src/components/Header.astro
+++ b/src/components/Header.astro
@@ -12,7 +12,7 @@ import Logo from "./Logo.astro"
         <span class="bar3"></span>
       </button>
      <ul>
-        <li><a href="/event">Events</a></li>
+        <li><a href="/events">Events</a></li>
         <li><a href="/artister">Artister</a></li>
         <li><a href="/booking">Booking & promoting</a></li>
         <li><a href="/about">Om os</a></li>
