some icon og footer done

--- a/src/components/Footer.astro
+++ b/src/components/Footer.astro
@@ -37,7 +37,7 @@ import SocialIcon from "./SocialIcon.astro";
     </div>
 </div>
     <div class="social">
-<SocialIcon></SocialIcon>
+<SocialIcon>
     </div>
     <div class="designed">
         <p>Copyright © 2024 Kanonproduktion</p>
@@ -87,7 +87,9 @@ import SocialIcon from "./SocialIcon.astro";
     }
 
  .social{
-    
+border-top: var(--color-background-stroke) solid 1px; 
+margin-top: 4rem;
+padding-top: 2rem;
 
  }
 
@@ -105,8 +107,8 @@ import SocialIcon from "./SocialIcon.astro";
     display: flex;
     flex-direction: column;
     align-items: center;
-    margin-top: 50px;
-    border-top: var(--color-background-stroke) solid 1px; 
+    margin-top: 0px;
+ 
    
  
   }
