footer final done

--- a/src/pages/artister.astro
+++ b/src/pages/artister.astro
@@ -2,6 +2,7 @@
 import MainLayout from "../layouts/MainLayout.astro";
 import ArtistCard from "../components/ArtistCard.astro";
 ---
+<MainLayout>
 <section class="intro">
     <h1>Artister</h1>
     <h3>Se de skønne artister vi samarbejder med.</h3>
@@ -21,3 +22,4 @@ import ArtistCard from "../components/ArtistCard.astro";
     <ArtistCard></ArtistCard>
     <ArtistCard></ArtistCard>
 </section>
+</MainLayout>
