--- a/src/pages/artister.astro
+++ b/src/pages/artister.astro
@@ -23,3 +23,21 @@ import ArtistCard from "../components/ArtistCard.astro";
     <ArtistCard></ArtistCard>
 </section>
 </MainLayout>
+
+<style>
+    section {
+        padding-inline: var(--gap11);
+    }
+    .artister{
+        display: flex;
+margin-inline: auto;
+justify-content: center;
+align-items: center;
+align-content: center;
+gap: 1.875rem;
+flex-shrink: 0;
+flex-wrap: wrap;
+padding-top: 2rem;
+    
+    }
+</style>
