--- a/src/pages/artister.astro
+++ b/src/pages/artister.astro
@@ -40,4 +40,13 @@ flex-wrap: wrap;
 padding-top: 2rem;
     
     }
+
+    @media (max-width: 1200px) {
+        .artister{
+        display: grid;
+        grid-template-columns: 1fr 1fr;
+    
+    }
+
+    }
 </style>
