--- a/src/components/Footer.astro
+++ b/src/components/Footer.astro
@@ -7,7 +7,7 @@ import SocialIcon from "./SocialIcon.astro";
 <footer>
     <div class="footer">
     <div class="col_1">
-       <img src="/public/lille_logo.svg" alt="kanonproduktion logo">
+       <img src="/lille_logo.svg" alt="kanonproduktion logo">
     </div>
 
     <div class="col_2">
