--- a/src/components/TestimonialsStar.astro
+++ b/src/components/TestimonialsStar.astro
@@ -14,5 +14,10 @@
         display: flex;
         flex-direction: row;
     align-items: center;
+    margin-inline: auto;
+    }
+
+    p{
+        text-align: center;
     }
 </style>
