--- a/src/pages/index.astro
+++ b/src/pages/index.astro
@@ -102,21 +102,24 @@ import Button from "../components/Button.astro";
 	text-align: center;
 	width: auto;
 	margin: 5rem 0rem;
+	border: 2px solid var(--color-background-stroke);
 }
 
 .testimonial{
-	border: 2px solid var(--color-background-stroke);
+	
 	padding: 7.66rem 2rem;
 
 }
 
 .testimonial3{
-	border-top: 2px solid var(--color-background-stroke);
+	border-right: 2px solid var(--color-background-stroke);
+	border-left: 2px solid var(--color-background-stroke);
 	border-bottom: 2px solid var(--color-background-stroke);
 	padding: 2rem 2rem;
 }
 .testimonial4{
-	border-bottom: 2px solid var(--color-background-stroke);
+	border-right: 2px solid var(--color-background-stroke);
+	border-left: 2px solid var(--color-background-stroke);
 	padding: 2rem 2rem;
 }
 
@@ -129,6 +132,7 @@ import Button from "../components/Button.astro";
 	text-align: center;
 	width: auto;
 	margin: 5rem 0;
+	border: 0px solid var(--color-background-stroke);
 }
 
 .testimonial3{
