--- a/src/pages/booking.astro
+++ b/src/pages/booking.astro
@@ -2,10 +2,10 @@
 import MainLayout from "../layouts/MainLayout.astro";
 import Faq from "../components/Faq.astro";
 import TestimonialsSlider from "../components/TestimonialsSlider.astro";
-import TestimonialsStar from "../components/TestimonialsStar.astro";
 import KontaktFormular from "../components/KontaktFormular.astro";
 import Button from "../components/Button.astro";
 ---
+<MainLayout>
 <section class="booking">
   <h1>Booking og promoting</h1>
   <div class="tekst">
@@ -31,3 +31,4 @@ import Button from "../components/Button.astro";
     <h2>Kontakt os</h2>
     <KontaktFormular></KontaktFormular>
   </section>
+</MainLayout>
