--- a/src/layouts/MainLayout.astro
+++ b/src/layouts/MainLayout.astro
@@ -8,7 +8,7 @@ const { title } = Astro.props;
 <html lang="da">
   <head>
     <meta charset="utf-8" />
-    <meta name="description" content="Køb håndlavet tidløst keramik til dit hjem hos Piloscph" />
+    <meta name="description" content="Køb billetter til uforglemmelig begivenheder hos Kanonproduktion" />
     <link rel="icon" type="image/svg+xml" href="/favicon.svg" />
     <meta name="viewport" content="width=device-width" />
     <meta name="generator" content={Astro.generator} />
