--- a/src/components/Faq.astro
+++ b/src/components/Faq.astro
@@ -202,6 +202,21 @@ svg{
   line-height: 1.5;
   max-width: 800px;
 }
+@media (max-width: 900px){
+    span{
+
+font-size: var(----Headline3-small);
+
+
+}
+
+ul, p{
+
+font-size: var(--Body-small);
+
+
+}
+}
 
   </style>
 
