--- a/src/styles/style.css
+++ b/src/styles/style.css
@@ -109,6 +109,8 @@
 
   --gap1: 0.3125rem;
   --gap2: 0.625rem;
+  --gap3: 0.9375rem;
+  --gap4: 1.25rem;
   --gap5: 1.5625rem;
   --gap7: 2.1875rem;
   --gap8: 2.5rem;
